--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,8 @@ header span {
     left:50%;
     transform: translate(-50%,-50%);
     height: 40vh;
-    width: 40vw;
+    width: 100%;
+    max-width: 700px;
     box-shadow: 2px 2px 1px 2px black;
     background-color: lightblue;
     border-radius: 5px;
@@ -252,6 +253,7 @@ header span {
 
 .answer-box-container {
     width: 70%;
+    max-width: 550px;
     height: 100%;
     justify-content: center;
     gap: 1px;
@@ -259,6 +261,7 @@ header span {
 }
 .answer-image-container {
     width: 20%;
+    max-width: 150px;
     height: 100%;
     margin-left: 20px;
     display: flex;
@@ -285,7 +288,9 @@ header span {
 
 .answer-box {
     height: 9vh;
-    width: 11vh;
+    max-height: 85px;
+    width: 9vh;
+    max-width: 85px;
     box-shadow: 1px 1px 2px 1px black;
     border-radius: 5px;
     display: flex;
