--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,7 @@ header span {
     left:50%;
     transform: translate(-50%,-50%);
     height: 40vh;
-    width: 100%;
+    width: 80vw;
     max-width: 700px;
     box-shadow: 2px 2px 1px 2px black;
     background-color: lightblue;
@@ -337,12 +337,27 @@ header span {
     background-color: lightgreen;
 }
 
+@media (max-width: 575px) {
+    .answer-box {
+        width: 12vw;
+    }
+}
 @media (max-height: 400px) {
     .key {
         font-size: 15px;
     }
 }
-
+@media (max-width: 400px) {
+    #dictionary-button {
+        font-size: 1rem;
+    }
+    .key {
+        font-size: 15px;
+    }
+    .keyboard {
+        gap: 3px;
+    }
+}
 .hide-me {
     display: none;
 }
